k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: society
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 625552167867.dkr.ecr.ap-south-2.amazonaws.com/society-maintenance-backend:1.1
          ports:
            - containerPort: 5000
