k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: society
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 625552167867.dkr.ecr.ap-south-2.amazonaws.com/society-maintenance-frontend:1.3
          ports:
            - containerPort: 80
