k8s/backend-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-public
  namespace: society
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
  type: LoadBalancer
